<resources>
    <string name="app_name">Camppus</string>
    <string name="welcome_name">WELCOME</string>
    <string name="don_t_have_acount">Don´t have an account?</string>
    <string name="sing_in">Sign In</string>
    <string name="btn_login">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_main_navigation">MainActivity</string>


    <string name="title_chat">Chat</string>
    <string name="title_users">Users</string>
    <string name="title_groups">Groups</string>
    <string name="title_assigments">Assigments</string>
    <string name="title_profile">Profile</string>
    <string name="login_with_google">Login with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
</resources>