<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_calls"
        android:icon="@drawable/ic_baseline_missed_video_call_24"
        android:title="@string/title_calls" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/navigation_assigments"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/title_assigments" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />



</menu>